改善儀表板樣式

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
     <script src="assets\dashboard_data.js"></script>
-  <link rel="stylesheet" href="assets/dashboard.css">
+    <link rel="stylesheet" href="assets/dashboard.css" />
   </head>
   <body>
     <div class="container">
@@ -323,5 +323,16 @@
         }
       });
     </script>
+    <!-- 底部紅色版權區塊 -->
+    <div class="footer-copyright">
+      SatoshiCash社区 中本聪现金中文电报社区赞助开发 Copyright 2025-2125 ｜
+      <a
+        href="https://github.com/Honguan/SCASH-Transfer-Query"
+        target="_blank"
+        rel="noopener"
+        >GitHub 专案连结</a
+      >
+      >
+    </div>
   </body>
 </html>
