--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="assets\satoshicash.webp" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-    <script src="assets\dashboard_data.js"></script>
+  <!-- <script src="assets/dashboard_data.js"></script> -->
     <link rel="stylesheet" href="assets/dashboard.css" />
   </head>
   <body>
@@ -112,19 +112,11 @@
       function updateRefreshTime() {
         const now = new Date();
         const pad = (n) => n.toString().padStart(2, "0");
-        const timeStr = `${now.getFullYear()}-${pad(now.getMonth() + 1)}-${pad(
-          now.getDate()
-        )} ${pad(now.getHours())}:${pad(now.getMinutes())}:${pad(
-          now.getSeconds()
-        )}`;
-        document.getElementById(
-          "refreshTime"
-        ).textContent = `刷新时间：${timeStr}`;
+        const timeStr = `${now.getFullYear()}/${pad(now.getMonth() + 1)}/${pad(now.getDate())} ${pad(now.getHours())}:${pad(now.getMinutes())}`;
+        document.getElementById("refreshTime").textContent = `刷新时间：${timeStr}`;
       }
       let countdown = 60;
-      function resetCountdown() {
-        countdown = 60;
-      }
+      function resetCountdown() { countdown = 60; }
       updateRefreshTime();
       setInterval(() => {
         countdown--;
@@ -134,15 +126,29 @@
           updateRefreshTime();
         }
       }, 1000);
-      // 點擊刷新時間手動刷新並重置倒數
       document.getElementById("refreshTime").onclick = function () {
         resetCountdown();
         location.reload();
       };
-      // 手動刷新（F5）時自動重置倒數（瀏覽器自動重載會重設變數）
       window.addEventListener("keydown", function (e) {
         if (e.key === "F5") resetCountdown();
       });
+
+      // 取得資料並渲染
+      let addressBalances = [];
+      let txRecords = [];
+      async function fetchDataAndRender() {
+        // 取得地址餘額
+        const abRes = await fetch("http://localhost:5000/api/address_balances");
+        addressBalances = await abRes.json();
+        // 取得交易紀錄
+        const txRes = await fetch("http://localhost:5000/api/tx_records");
+        txRecords = await txRes.json();
+        renderPieChart();
+        renderRankTables();
+        renderTxTable();
+      }
+      document.addEventListener("DOMContentLoaded", fetchDataAndRender);
       // 修正折叠排行榜表格功能
       document.addEventListener("DOMContentLoaded", function () {
         // 默认只展开前10名
