--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="assets\satoshicash.webp" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
-    <script src="dashboard_data.js"></script>
+    <script src="assets/dashboard_data.js"></script>
     <link rel="stylesheet" href="assets/dashboard.css" />
   </head>
   <body>
