--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             id="pieChart"
             width="420"
             height="420"
-            style="max-width: 100%; max-height: 100%"
+            style="width: 420px; height: 420px; display: block; margin: 0 auto;"
           ></canvas>
         </div>
         <div class="table-area">
