--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
               <thead>
                 <tr>
                   <th class="rank-col">排名</th>
-                  <th>地址</th>
-                  <th>余额</th>
-                  <th>变动数量</th>
-                  <th>更新时间</th>
+                  <th class="address-col">地址</th>
+                  <th class="balance-col">余额</th>
+                  <th class="change-col">变动数量</th>
+                  <th class="update-time-col">更新时间</th>
                 </tr>
               </thead>
               <tbody class="scrollable-tbody"></tbody>
@@ -78,32 +78,32 @@
           <div class="mt-16 collapsible" data-target="rankTable50">
             <b>第11~50名 ▼</b>
           </div>
-          <div class="collapsible-content" id="wrap-rankTable50">
+            <div class="collapsible-content" id="wrap-rankTable50">
             <table id="rankTable50">
               <thead>
-                <tr>
-                  <th class="rank-col">排名</th>
-                  <th>地址</th>
-                  <th>余额</th>
-                  <th>变动数量</th>
-                  <th>更新时间</th>
-                </tr>
+              <tr>
+                <th class="rank-col">排名</th>
+                <th class="address-col">地址</th>
+                <th class="balance-col">余额</th>
+                <th class="change-col">变动数量</th>
+                <th class="update-time-col">更新时间</th>
+              </tr>
               </thead>
               <tbody class="scrollable-tbody"></tbody>
             </table>
-          </div>
-          <div class="mt-16 collapsible" data-target="rankTable100">
+            </div>
+            <div class="mt-16 collapsible" data-target="rankTable100">
             <b>第51~100名 ▼</b>
-          </div>
-          <div class="collapsible-content" id="wrap-rankTable100">
+            </div>
+            <div class="collapsible-content" id="wrap-rankTable100">
             <table id="rankTable100">
               <thead>
-                <tr>
-                  <th class="rank-col">排名</th>
-                  <th>地址</th>
-                  <th>余额</th>
-                  <th>变动数量</th>
-                  <th>更新时间</th>
+              <tr>
+                <th class="rank-col">排名</th>
+                <th class="address-col">地址</th>
+                <th class="balance-col">余额</th>
+                <th class="change-col">变动数量</th>
+                <th class="update-time-col">更新时间</th>
                 </tr>
               </thead>
               <tbody class="scrollable-tbody"></tbody>
@@ -307,7 +307,7 @@
           // 地址顯示前6...後4
           const shortAddr =
             x.address.length > 12
-              ? `${x.address.slice(0, 6)}...${x.address.slice(-4)}`
+              ? `${x.address.slice(0, 12)}...${x.address.slice(-10)}`
               : x.address;
           const addrLink = `<a href='https://scash.one/?search=${x.address}' target='_blank' rel='noopener' title='${x.address}' style='word-break:break-all;max-width:700px;display:inline-block;'>${shortAddr}</a>`;
           let changeCell = "";
@@ -332,7 +332,7 @@
           }
           tr.innerHTML = `<td class='rank-col'>${
             i + 1
-          }</td><td style=\"min-width:700px;max-width:900px;word-break:break-all;\">${addrLink}</td><td>${(Math.round(x.balance * 100) / 100).toFixed(2)}</td><td>${changeCell}</td><td>${updateTimeCell}</td>`;
+            }</td><td class="address-col">${addrLink}</td><td class="balance-col">${(Math.round(x.balance * 100) / 100).toFixed(2)}</td><td class="change-col">${changeCell}</td><td class="update-time-col">${updateTimeCell}</td>`;
           tbody10.appendChild(tr);
         });
 
@@ -341,6 +341,7 @@
         tbody50.innerHTML = "";
         addressBalances.slice(10, 50).forEach((x, i) => {
           const tr = document.createElement("tr");
+          // 地址顯示前6...後4
           const shortAddr =
             x.address.length > 12
               ? `${x.address.slice(0, 6)}...${x.address.slice(-4)}`
@@ -348,10 +349,19 @@
           const addrLink = `<a href='https://scash.one/?search=${x.address}' target='_blank' rel='noopener' title='${x.address}' style='word-break:break-all;max-width:700px;display:inline-block;'>${shortAddr}</a>`;
           let changeCell = "";
           let updateTime = x.update_time || x.scan_time || "";
-          let updateDate = updateTime ? updateTime.split(" ")[0] : "";
-          let updateTimeCell = updateTime
-            ? `<span class='fold-time' style='cursor:pointer;color:#0074d9;' title='點擊展開/收合'>${updateDate}</span><span class='full-time' style='display:none;'>${updateTime}</span>`
-            : "";
+          // 轉換格式 yyyy-MM-dd HH:mm:ss -> yyyy/MM/dd HH:mm
+          let updateDate = "";
+          if (updateTime) {
+            const dt = updateTime.split(" ");
+            if (dt.length === 2) {
+              const d = dt[0].replace(/-/g, "/");
+              const t = dt[1].slice(0, 5);
+              updateDate = `${d} ${t}`;
+            } else {
+              updateDate = updateTime.replace(/-/g, "/");
+            }
+          }
+          let updateTimeCell = updateTime ? updateDate : "";
           if (x.change_str && x.change_str !== "0" && x.update_time) {
             changeCell = `${x.change_str} <br><span style='font-size:0.9em;color:#888'>${x.update_time}</span>`;
           } else {
@@ -359,9 +369,10 @@
           }
           tr.innerHTML = `<td class='rank-col'>${
             i + 11
-          }</td><td style=\"min-width:700px;max-width:900px;word-break:break-all;\">${addrLink}</td><td>${(Math.round(x.balance * 100) / 100).toFixed(2)}</td><td>${changeCell}</td><td>${updateTimeCell}</td>`;
+          }</td><td class="address-col">${addrLink}</td><td class="balance-col">${(Math.round(x.balance * 100) / 100).toFixed(2)}</td><td class="change-col">${changeCell}</td><td class="update-time-col">${updateTimeCell}</td>`;
           tbody50.appendChild(tr);
         });
+
 
         // 第51~100名
         const tbody100 = document.querySelector("#rankTable100 tbody");
@@ -375,10 +386,19 @@
           const addrLink = `<a href='https://scash.one/?search=${x.address}' target='_blank' rel='noopener' title='${x.address}' style='word-break:break-all;max-width:700px;display:inline-block;'>${shortAddr}</a>`;
           let changeCell = "";
           let updateTime = x.update_time || x.scan_time || "";
-          let updateDate = updateTime ? updateTime.split(" ")[0] : "";
-          let updateTimeCell = updateTime
-            ? `<span class='fold-time' style='cursor:pointer;color:#0074d9;' title='點擊展開/收合'>${updateDate}</span><span class='full-time' style='display:none;'>${updateTime}</span>`
-            : "";
+          // 轉換格式 yyyy-MM-dd HH:mm:ss -> yyyy/MM/dd HH:mm
+          let updateDate = "";
+          if (updateTime) {
+            const dt = updateTime.split(" ");
+            if (dt.length === 2) {
+              const d = dt[0].replace(/-/g, "/");
+              const t = dt[1].slice(0, 5);
+              updateDate = `${d} ${t}`;
+            } else {
+              updateDate = updateTime.replace(/-/g, "/");
+            }
+          }
+          let updateTimeCell = updateTime ? updateDate : "";
           if (x.change_str && x.change_str !== "0" && x.update_time) {
             changeCell = `${x.change_str} <br><span style='font-size:0.9em;color:#888'>${x.update_time}</span>`;
           } else {
@@ -386,7 +406,7 @@
           }
           tr.innerHTML = `<td class='rank-col'>${
             i + 51
-          }</td><td style=\"min-width:700px;max-width:900px;word-break:break-all;\">${addrLink}</td><td>${(Math.round(x.balance * 100) / 100).toFixed(2)}</td><td>${changeCell}</td><td>${updateTimeCell}</td>`;
+          }</td><td class="address-col">${addrLink}</td><td class="balance-col">${(Math.round(x.balance * 100) / 100).toFixed(2)}</td><td class="change-col">${changeCell}</td><td class="update-time-col">${updateTimeCell}</td>`;
           tbody100.appendChild(tr);
         });
       }
